--- a/Games/2048/2048.css
+++ b/Games/2048/2048.css
@@ -121,7 +121,6 @@ hr {
 button {
     background-color: rgb(179, 199, 192);
     color: black;
-    font-size: 16px;
     padding: 10px;
 }
 
@@ -131,9 +130,22 @@ button:hover {
     transition: 0.3s ease-in-out;
 }
 
+
 @media screen and (max-width:1000px) {
     .game-container {
         width: 100%;
-        padding: 40px;
+    }
+
+    #board {
+        width: 288px;
+        height: 288px;
+        border: 4px solid #bbada0;
+    }
+
+    .tile {
+        width: 70px;
+        height: 70px;
+        border: 3px solid #bbada0;
+        font-size: 30px;
     }
 }
