--- a/Games/Snake/snake.css
+++ b/Games/Snake/snake.css
@@ -42,8 +42,12 @@ button:hover {
 }
 
 @media screen and (max-width:1000px) {
+    .webpage {
+        height: 100vh;
+    }
+    
     .game-container {
         width: 100%;
-        padding: 40px;
+        padding: 10px;
     }
 }
