--- a/Games/Snake/snake.css
+++ b/Games/Snake/snake.css
@@ -42,12 +42,11 @@ button:hover {
 }
 
 @media screen and (max-width:1000px) {
-    .webpage {
-        height: 100vh;
-    }
-    
     .game-container {
         width: 100%;
         padding: 10px;
+    }
+    button {
+        padding: 5px;
     }
 }
